fix: ltr-en language, add  new hover, tooltip

--- a/src/styles/sm-orders.scss
+++ b/src/styles/sm-orders.scss
@@ -524,6 +524,7 @@ body {
 }
 .tippy-content {
    padding: 0;
+   font-family: 'SimplerPro';
 }
 .tippy-arrow {
    color: #fff;
@@ -555,11 +556,13 @@ body {
    color: #002d74;
    max-width: 135px;
    width: 100%;
+   transition: all 0.3s ease 0s;
    @media (max-width: 1200px) {
       max-width: rem(300px);
    }
-   &:active {
-      background-color: #eeeeee;
+   &:hover {
+      box-shadow: 0 3px 4px 0 rgb(0 75 193 / 14%);
+      transition: all 0.3s ease 0s;
    }
 }
 .sm-start-action-button-approve {
@@ -574,11 +577,13 @@ body {
    border-radius: 4px;
    max-width: 185px;
    width: 100%;
+   transition: all 0.3s ease 0s;
    @media (max-width: 1200px) {
       max-width: rem(300px);
    }
-   &:active {
-      background: rgba(0, 44, 116, 0.9);
+   &:hover {
+      box-shadow: 0 4px 6px 0 rgb(1 62 158 / 20%);
+      transition: all 0.3s ease 0s;
    }
 }
 //CancellationReasonActions========================================================================================================================================================
@@ -750,8 +755,10 @@ body {
    max-width: rem(226px);
    width: 100%;
    word-break: break-word;
-   &:active {
-      background: rgba(0, 44, 116, 0.9);
+   transition: all 0.3s ease 0s;
+   &:hover {
+      box-shadow: 0 4px 6px 0 rgb(1 62 158 / 20%);
+      transition: all 0.3s ease 0s;
    }
    @media (max-width: 600px) {
       flex: 0 0 calc(50% - 4px);
