--- a/src/styles/sm-orders.scss
+++ b/src/styles/sm-orders.scss
@@ -103,6 +103,52 @@ body {
          display: block;
       }
    }
+   &._cancellation-success {
+      position: relative;
+      &::after {
+         content: '';
+         position: absolute;
+         width: 100%;
+         height: 100%;
+         top: 0;
+         left: 0;
+         background: rgba(52, 83, 69, 0.2);
+         backdrop-filter: blur(3px);
+         border-radius: 6px;
+      }
+      .sm-failure-process {
+         display: none;
+      }
+      .sm-cancellation-success-action {
+         display: block;
+      }
+   }
+
+   &._cancellation {
+      .sm-failure-process {
+         display: none;
+      }
+      .sm-cancellation-action {
+         display: block;
+      }
+   }
+   &._wl-cancellation {
+      .sm-failure-process {
+         display: none;
+      }
+      .sm-wl-cancellation-action {
+         display: block;
+      }
+   }
+   &._failed-cancellation {
+      .sm-failure-process {
+         display: none;
+      }
+      .sm-cancellation-failed-action {
+         display: block;
+      }
+   }
+
    &:not(:last-child) {
       margin-bottom: rem(40px);
    }
@@ -163,11 +209,32 @@ body {
    font-size: rem(14px);
    line-height: 157%;
    color: #000;
+   ._canceled &,
    ._disabled & {
       color: #8c95ac;
    }
    @media (max-width: 1200px) {
       color: #363d50;
+   }
+}
+.sm-blue-btn {
+   display: block;
+   border: none;
+   padding: rem(8px);
+   font-weight: 700;
+   font-size: rem(18px);
+   line-height: 144%;
+   text-align: center;
+   color: #ffffff;
+   background: #002d74;
+   border-radius: 4px;
+   max-width: rem(185px);
+   width: 100%;
+   transition: all 0.3s ease 0s;
+   word-break: break-word;
+   &:hover {
+      box-shadow: 0 4px 6px 0 rgb(1 62 158 / 20%);
+      transition: all 0.3s ease 0s;
    }
 }
 //ImageBlock========================================================================================================================================================
@@ -272,8 +339,10 @@ body {
       padding: 16px;
    }
 }
-//StaticMainInfo========================================================================================================================================================
-.sm-static-main-info {
+//StaticRoomList========================================================================================================================================================
+.sm-static-inner-rooms-list {
+}
+.sm-static-room-item {
    padding-bottom: rem(27px);
    display: grid;
    grid-template-columns: 1fr auto;
@@ -290,8 +359,19 @@ body {
          justify-self: end;
       }
    }
+   &._canceled {
+      color: #8c95ac;
+   }
 }
-.sm-main-info-list {
+
+.sm-static-room-item-first-col {
+}
+.sm-static-room-item-second-col {
+   display: flex;
+   gap: 16px;
+   align-items: center;
+}
+.sm-static-room-meta-list {
    gap: rem(8px) rem(32px);
 
    & li {
@@ -323,16 +403,34 @@ body {
    color: #000000;
    max-width: rem(320px);
    margin-bottom: 0;
+   color: inherit;
+}
+.sm-static-room-canceled {
+   display: none;
+   padding: 8px;
+   font-size: rem(14px);
+   line-height: 157%;
+   background: #f6faff;
+   border: 1px solid rgba(213, 225, 245, 0.8);
+   border-radius: 4px;
+   max-width: rem(90px);
+   word-break: break-word;
+   text-align: center;
+   color: #000000;
+   ._canceled & {
+      display: block;
+   }
    ._disabled & {
       color: #8c95ac;
    }
 }
-.sm-main-info-price-label {
+.sm-static-room-price-label {
    font-weight: 400;
    font-size: rem(14px);
    line-height: 157%;
    display: block;
    color: #000000;
+   ._canceled &,
    ._disabled & {
       color: #8c95ac;
    }
@@ -341,7 +439,7 @@ body {
       font-size: rem(13px);
    }
 }
-.sm-main-info-price {
+.sm-static-room-price {
    font-weight: 400;
    font-size: rem(24px);
    line-height: 133%;
@@ -351,6 +449,7 @@ body {
    gap: 2px;
    word-break: break-all;
    max-width: rem(140px);
+   ._canceled &,
    ._disabled & {
       color: #8c95ac;
    }
@@ -554,7 +653,7 @@ body {
    line-height: 144%;
    text-align: center;
    color: #002d74;
-   max-width: 135px;
+   max-width: rem(135px);
    width: 100%;
    transition: all 0.3s ease 0s;
    @media (max-width: 1200px) {
@@ -566,24 +665,8 @@ body {
    }
 }
 .sm-start-action-button-approve {
-   border: none;
-   padding: 8px 10px;
-   font-weight: 700;
-   font-size: rem(18px);
-   line-height: 144%;
-   text-align: center;
-   color: #ffffff;
-   background: #002d74;
-   border-radius: 4px;
-   max-width: 185px;
-   width: 100%;
-   transition: all 0.3s ease 0s;
    @media (max-width: 1200px) {
       max-width: rem(300px);
-   }
-   &:hover {
-      box-shadow: 0 4px 6px 0 rgb(1 62 158 / 20%);
-      transition: all 0.3s ease 0s;
    }
 }
 //CancellationReasonActions========================================================================================================================================================
@@ -744,22 +827,7 @@ body {
    }
 }
 .sm-cancellation-reason-next-btn {
-   padding: 8px;
-   background: #002d74;
-   border-radius: 4px;
-   font-weight: 700;
-   font-size: rem(18px);
-   line-height: 144%;
-   color: #ffffff;
-   border: none;
    max-width: rem(226px);
-   width: 100%;
-   word-break: break-word;
-   transition: all 0.3s ease 0s;
-   &:hover {
-      box-shadow: 0 4px 6px 0 rgb(1 62 158 / 20%);
-      transition: all 0.3s ease 0s;
-   }
    @media (max-width: 600px) {
       flex: 0 0 calc(50% - 4px);
    }
@@ -975,4 +1043,137 @@ body {
    100% {
       transform: rotate(-360deg);
    }
+}
+//========================================================================================================================================================
+//========================================================================================================================================================
+//cancellationSuccess========================================================================================================================================================
+.sm-cancellation-success-action {
+   display: none;
+   height: 100%;
+   background: #ffffff;
+   border: 1px solid rgba(213, 225, 245, 0.8);
+   border-radius: 6px;
+   position: relative;
+   z-index: 20;
+   overflow: hidden;
+}
+.sm-cancellation-success-action-top-line {
+   background: #f6faff;
+   border-bottom: 1px solid rgba(213, 225, 245, 0.8);
+   text-align: center;
+   padding: 12px 24px;
+   font-weight: 400;
+   font-size: rem(16px);
+   line-height: 150%;
+   color: #002d74;
+   margin-bottom: 0;
+}
+.sm-cancellation-success-action-main-line {
+   padding: rem(16px) 24px;
+   @media (max-width: 1200px) {
+      padding: rem(32px) 24px;
+   }
+}
+.sm-cancellation-success-action-wish {
+   font-weight: 600;
+   font-size: rem(18px);
+   line-height: 144%;
+   text-align: center;
+   color: #002d74;
+   max-width: rem(250px);
+   margin: 0px auto rem(24px) auto;
+}
+.sm-cancellation-success-action-email-info {
+   font-weight: 400;
+   font-size: rem(14px);
+   line-height: 157%;
+   text-align: center;
+   margin-bottom: rem(16px);
+}
+.sm-cancellation-success-action-btn {
+   margin: auto;
+}
+
+//========================================================================================================================================================
+//========================================================================================================================================================
+//Cancellation-========================================================================================================================================================
+.sm-cancellation-action {
+   background: #f6faff;
+   height: 100%;
+   display: none;
+   padding: rem(24px) rem(24px) rem(120px) rem(24px);
+}
+.sm-cancellation-info {
+   margin-bottom: rem(48px);
+   font-weight: 600;
+   font-size: rem(18px);
+   line-height: 144%;
+   color: #002d74;
+}
+.sm-cancellation-btn {
+   margin: auto;
+}
+//========================================================================================================================================================
+//========================================================================================================================================================
+//wlCancellation-========================================================================================================================================================
+.sm-wl-cancellation-action {
+   height: 100%;
+   padding: 24px;
+   background: #f6faff;
+   display: none;
+   @media (max-width: 1200px) {
+      padding-bottom: rem(105px);
+   }
+}
+.sm-wl-cancellation-buttons-block {
+   justify-content: center;
+}
+//========================================================================================================================================================
+//========================================================================================================================================================
+//FailedCancellation-========================================================================================================================================================
+.sm-cancellation-failed-action {
+   display: none;
+   background: #f6faff;
+   height: 100%;
+   padding: 24px;
+}
+.sm-cancellation-failed-top-line {
+   margin-bottom: rem(32px);
+}
+.sm-cancellation-failed-title {
+   font-weight: 600;
+   font-size: rem(18px);
+   line-height: 144%;
+   color: #002d74;
+   margin-bottom: rem(16px);
+}
+.sm-cancellation-failed-sub-title {
+   font-weight: 700;
+   font-size: rem(14px);
+   line-height: 157%;
+   margin-bottom: 0;
+}
+.sm-cancellation-failed-btn {
+   margin: auto;
+}
+.sm-cancellation-failed-contact-block {
+   background: #ffffff;
+   border: 1px solid rgba(213, 225, 245, 0.8);
+   border-radius: 8px;
+   padding: rem(8px);
+   margin-top: rem(32px);
+   display: flex;
+   align-items: flex-start;
+   gap: 15px;
+   & img {
+      width: rem(15px);
+      height: rem(15px);
+   }
+}
+.sm-cancellation-failed-contact-text {
+   font-weight: 600;
+   font-size: rem(14px);
+   line-height: 157%;
+   color: #000000;
+   margin-bottom: 0;
 }
