--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,7 @@
 @import '../../node_modules/sass-rem/rem';
 @import './sm-orders.scss';
+@import './sm-orders-cancel-popup.scss';
+@import './sm-see-order-popup.scss';
 
 .site-header {
    background: #002d74;
