--- a/src/styles/sm-see-order-popup.scss
+++ b/src/styles/sm-see-order-popup.scss
@@ -8,7 +8,6 @@
 }
 .sm-see-order-body {
    position: absolute;
-   top: 0;
    left: 0;
    width: 100%;
    height: 100%;
@@ -16,18 +15,22 @@
    display: flex;
    justify-content: center;
    align-items: start;
-   padding: 270px 20px 60px 20px;
+   padding: calc((100vh - 500px) / 2) 20px calc((100vh - 500px) / 2) 20px;
    overflow-y: auto;
    opacity: 0;
    visibility: hidden;
    transition: all 0.3s ease 0s;
+   overflow-x: hidden;
+   @media (max-width: 1200px) {
+      padding: 110px 20px 60px 20px;
+   }
+   @media (max-height: 520px) {
+      padding: 20px 50px 60px 20px;
+   }
    ._open-popup & {
       opacity: 1;
       visibility: visible;
       transition: all 0.3s ease 0s;
-   }
-   @media (max-width: 1200px) {
-      padding: 110px 20px 60px 20px;
    }
 }
 .sm-see-order-content {
@@ -35,8 +38,8 @@
    border-radius: 0px 0px 6px 6px;
    max-width: rem(625px);
    width: 100%;
-   transform: scale(0);
    transition: all 0.3s ease 0s;
+   transform: scale(0);
    ._open-popup & {
       transform: scale(1);
       transition: all 0.3s ease 0s;
@@ -82,6 +85,7 @@
 }
 .sm-see-order-dynamic-block {
    padding: 45px 62px;
+   position: relative;
    @media (max-width: 1200px) {
       padding: 40px 32px 54px 32px;
    }
@@ -127,7 +131,7 @@
    max-width: rem(236px);
    width: 100%;
    margin: auto;
-   @media (max-width: 425px) {
+   @media (max-width: rem(425px)) {
       max-width: none;
    }
 }
@@ -355,4 +359,161 @@
 .sm-enter-code-submit-btn {
    margin: auto;
    padding: rem(8px) rem(24px);
+}
+
+//Datepicker Castom========================================================================================================================================================
+.sm-see-datepicker {
+   overflow-x: auto;
+   position: absolute;
+   top: 20px;
+   left: 50%;
+   transform: translate(-50%, 0px);
+   background: #ffffff;
+   box-shadow: 0px 5px 12px rgba(178, 194, 209, 0.25);
+   border: 1px solid rgba(213, 225, 245, 0.8);
+   border-radius: 16px;
+   padding: rem(16px) 112px;
+   display: flex;
+   flex-direction: column-reverse;
+   @media (max-width: rem(610px)) {
+      padding: rem(16px) 20px;
+      max-width: 100vw;
+      width: rem(328px);
+   }
+   @media (max-width: rem(350px)) {
+      width: calc(100vw - rem(10px));
+   }
+
+   & .ui-datepicker {
+      width: auto;
+   }
+   & .ui-widget.ui-widget-content {
+      border: none;
+      padding: 0px 0px 0px 0px;
+   }
+   & .ui-datepicker-header {
+      background: transparent;
+      border: none;
+      margin-bottom: 16px;
+      min-width: rem(260px);
+   }
+   & .ui-datepicker-title {
+      & span {
+         font-family: 'SimplerPro';
+         font-weight: 400;
+         font-size: rem(24px);
+         line-height: 133%;
+         color: #363d50;
+      }
+   }
+   & .ui-datepicker-next.ui-corner-all,
+   & .ui-datepicker-prev.ui-corner-all,
+   & .ui-datepicker-next-hover.ui-corner-all,
+   & .ui-datepicker-prev-hover.ui-corner-all {
+      top: 50%;
+      transform: translate(0px, -50%);
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+   }
+   & .ui-datepicker-next-hover.ui-corner-all {
+      left: 2px;
+      [dir='ltr'] & {
+         right: 2px;
+         left: unset;
+      }
+   }
+   & .ui-datepicker-prev-hover.ui-corner-all {
+      right: 2px;
+      [dir='ltr'] & {
+         left: 2px;
+         right: unset;
+      }
+   }
+   & .ui-icon.ui-icon-circle-triangle-e,
+   & .ui-icon.ui-icon-circle-triangle-w {
+      background-size: rem(10px) rem(16px);
+      width: rem(24px);
+      height: rem(24px);
+      background-position: center;
+      margin: 0px 0px 0px 0px;
+      transform: translate(-50%, -50%);
+   }
+   & .ui-icon.ui-icon-circle-triangle-e {
+      background-image: url('../images/orders/calendar-arrow-right.svg');
+   }
+   & .ui-icon.ui-icon-circle-triangle-w {
+      background-image: url('../images/orders/calendar-arrow-left.svg');
+   }
+
+   & .ui-datepicker-calendar {
+      border-spacing: 0px;
+      margin-bottom: 8px;
+      & thead th {
+         font-family: 'SimplerPro';
+         font-weight: 700;
+         font-size: rem(24px);
+         line-height: 133%;
+         text-align: center;
+         color: #363d50;
+         padding: 0px 0px 8px 0px;
+      }
+      & tbody td {
+         padding: 0px 0px 0px 0px;
+      }
+      & tbody .ui-state-default {
+         font-family: 'SimplerPro';
+         font-weight: 400;
+         font-size: rem(20px);
+         line-height: 100%;
+         text-align: center;
+         color: #363d50;
+         border: none;
+         background: transparent;
+         width: rem(40px);
+         height: rem(40px);
+         display: flex;
+         align-items: center;
+         justify-content: center;
+         padding: 0px 0px 0px 0px;
+         @media (max-width: rem(425px)) {
+            width: rem(38px);
+            height: rem(38px);
+            font-size: rem(16px);
+         }
+      }
+      & tbody .ui-state-active {
+         background: #002d74;
+         color: #ffffff;
+      }
+   }
+   //ButtonPannel========================================================================================================================================================
+   .sm-see-datepicker-action-btn {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-top: rem(1px) solid #e1e2e6;
+      padding-top: rem(16px);
+      gap: 15px;
+      width: 100%;
+      min-width: rem(260px);
+   }
+   .sm-see-datepicker-done-btn {
+      padding: rem(8px);
+      background: #002d74;
+      border-radius: 4px;
+      max-width: rem(100px);
+   }
+   .sm-see-datepicker-cancel-btn {
+      font-weight: 700;
+      font-size: rem(18px);
+      line-height: 144%;
+      text-align: center;
+      text-decoration-line: underline;
+      color: #002d74;
+      border: none;
+      background: transparent;
+      padding: 8px;
+      max-width: rem(100px);
+   }
 }
